# MLOps_lab_1

./: .dockerignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  inference.py  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py  test_settings.py
