[project]
name = "lab01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "xenon>=0.9.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
]
